<resources>
    <string name="app_name">Popular Movie DB</string>
    <string name="MovieImageConent">Movie</string>
    <string name="TitleStr">Title</string>
    <string name="Overview">Overview</string>
    <string name="userRating">User Rating</string>
    <string name="ReleaseDate">Release Date</string>
    <string name="title_activity_see_user_reviews">SeeUserReviews</string>
</resources>
